Fix profile scrollbar, make emoji drawer also dark

--- a/darkthemepfix.css
+++ b/darkthemepfix.css
@@ -51,3 +51,57 @@
 #user-profile-modal .tab-bar .tab-bar-item, #user-profile-modal .guilds .section .section-header, #user-profile-modal .header .header-info .header-info-inner .discord-tag .discriminator {
     color: #737f8d;
 }
+
+
+/* Profile Scroller (credits to AlexFlipnote for original) */
+
+#user-profile-modal .scroller-wrap .scroller::-webkit-scrollbar { width: 14px; }
+#user-profile-modal .scroller.guild-channels::-webkit-scrollbar { display: none; }
+#user-profile-modal .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+  border: 4px solid rgba(255, 255, 255, 0) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+#user-profile-modal .scroller-wrap .scroller::-webkit-scrollbar-thumb {
+  border: 4px solid rgba(255, 255, 255, 0) !important;
+  background-color: rgba(225, 225, 225, 0.1) !important;
+  display: initial;
+}
+#user-profile-modal .scroller-wrap .scroller::-webkit-scrollbar-thumb:hover {
+  border: 4px solid rgba(255, 255, 255, 0) !important;
+  background-color: rgba(225, 225, 225, 0.15) !important;
+}
+#user-profile-modal .scroller-wrap .scroller::-webkit-scrollbar-thumb:active {
+  border: 4px solid rgba(255, 255, 255, 0) !important;
+  background-color: rgba(225, 225, 225, 0.2) !important;
+}
+/* End of Scroller */
+
+
+/* Emoji Drawer */
+
+.emoji-picker .scroller::-webkit-scrollbar-track-piece {
+  border: 4px solid rgba(255, 255, 255, 0) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+
+.emoji-picker , .search-bar.search-bar-light , .emoji-picker .category, .search-bar.search-bar-light  {
+    background-color: #44484f;
+}
+
+.emoji-picker .scroller .emoji-item.selected {
+    background-color: #36393e;
+}	
+
+.search-bar.search-bar-light .search-bar-inner{
+	background: hsla(218,5%,47%,.3);
+}
+
+.search-bar.search-bar-light input {
+	color: hsla(0,0%,100%,.7);
+}
+
+.search-bar.search-bar-light input::-webkit-input-placeholder {
+	color: hsla(0,0%,100%,.4);
+}
+
+/* End of Emoji Drawer */
